<resources>
    <string name="app_name">KeyWorld</string>
    <string name="bar_key">Key</string>
    <string name="bar_wifi">Wi-Fi</string>
    <string name="bar_service">Service</string>
    <string name="bar_checkout">Checkout</string>
    <string name="return_button">Return</string>

    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Your last Name</string>
    <string name="code">Code</string>
    <string name="code_hint">6-digit code given by hotel</string>
    <string name="enter">Enter</string>

    <string name="room_number">Room: 301</string>
    <string name="open_button">OPEN</string>
    <string name="success_button">SUCCESS</string>
    <string name="fail_button">FAIL</string>

    <string name="wifi_reader">WiFi NFC Reader</string>
    <string name="wifi_connected">WiFi Connected!</string>

    <string name="instruction_button">\t\t\tInstructions</string>
    <string name="select_service_button">\t\t\tSelect Services</string>

    <string name="instruction_reader">Instruction NFC Reader</string>
    <string name="equipment_name">Curtain</string>
    <string name="equipment_instruction">1. Press the white button to open the curtains automatically.\n2. Press the black button to close the curtains automatically.</string>

    <string name="service_list">Service List</string>
    <string name="service1">Charge Delivery</string>
    <string name="service2">Cleaning Service</string>
    <string name="service3">Damage Repair</string>
    <string name="submit_service">Request Service</string>
    <string name="live_chat">Live Chat</string>

    <string name="request_success">Request Success!</string>
    <string name="request_done">Done</string>

    <string name="my_message">Can you send a pair of slipper to room 512?</string>
    <string name="other_message">Sure, coming</string>
    <string name="my_time">10:00 AM</string>
    <string name="other_time">10:15 AM</string>
    <string name="message_hint">Enter your message.</string>
    <string name="send_message">Send</string>

    <string name="checkout_text">Sure to check out of your current hotel?</string>
    <string name="checkout_confirm">Yes</string>

    <string name="send_review">Send</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="review_hint">Enter your review of the hotel.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>