<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SelectService">

    <RadioGroup
        android:id="@+id/service_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="90dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ser_list">

        <RadioButton
            android:id="@+id/service1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service1"
            android:textColor="@color/dark_gray"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/service2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service2"
            android:textColor="@color/dark_gray"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/service3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service3"
            android:textColor="@color/dark_gray"
            android:textSize="24sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/ser_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/service_list"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/request_service"
        android:layout_width="209dp"
        android:layout_height="55dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="101dp"
        android:text="@string/submit_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_options" />

</androidx.constraintlayout.widget.ConstraintLayout>