<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LiveChat">

    <ImageButton
        android:id="@+id/returnButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:contentDescription="@string/return_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnButton5" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />

    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/edit_gchat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/button_gchat_send"
            android:background="@android:color/transparent"
            android:hint="@string/message_hint"
            android:inputType="text"
            android:maxLines="6"
            android:minHeight="48dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_gchat_send"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/send_message"
            android:textColor="@color/black" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout >